--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.computerwizards.moodnotes.noteui.NoteViewModel" />
+            type="com.computerwizards.moodnotes.journal.noteui.NoteViewModel" />
 
         <variable
             name="note"
