--- a/app/src/main/res/layout/reddit_item.xml
+++ b/app/src/main/res/layout/reddit_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -15,38 +16,63 @@
     </data>
 
     <com.google.android.material.card.MaterialCardView
+        style="@style/MyCardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="@dimen/spacing_normal"
-        app:cardBackgroundColor="#FFFFFF"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="5dp">
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/subreddit"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="55dp"
-                android:text="@{reddit.subreddit}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/title"
+                style="@style/RedditHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="31dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/spacing_little"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="@dimen/spacing_little"
+                android:fontFamily="@font/alex_brush"
                 android:text="@{reddit.title}"
-                app:layout_constraintEnd_toEndOf="@+id/subreddit"
+                app:layout_constraintBottom_toTopOf="@+id/subreddit"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/subreddit" />
+                app:layout_constraintTop_toBottomOf="@+id/imageView6"
+                tools:text="Hello World" />
+
+            <TextView
+                android:id="@+id/subreddit"
+                style="@style/MyTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/spacing_little"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="@dimen/spacing_little"
+                android:text="@{reddit.subreddit}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title"
+                tools:text="More Text" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="0dp"
+                android:layout_height="178dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="@dimen/spacing_little"
+                android:layout_marginEnd="16dp"
+                android:layout_marginBottom="@dimen/spacing_little"
+                android:scaleType="centerCrop"
+                app:imageUrl="@{reddit.thumbnail}"
+                app:layout_constraintBottom_toTopOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
         </androidx.constraintlayout.widget.ConstraintLayout>
+
     </com.google.android.material.card.MaterialCardView>
 </layout>
