--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -48,18 +48,20 @@
 
         <EditText
             android:id="@+id/titleText"
+            style="@style/MyEditTextTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_normal"
             android:layout_marginTop="26dp"
             android:layout_marginEnd="@dimen/spacing_normal"
             android:ems="10"
-            android:hint="title"
             android:inputType="textPersonName"
+            android:hint="title"
             android:text="@={note.title}" />
 
         <EditText
             android:id="@+id/bodyText"
+            style="@style/MyEditTextTitle.Body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/spacing_normal"
