--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+  <color name="primaryColor">#01579b</color>
+  <color name="primaryLightColor">#4f83cc</color>
+  <color name="primaryDarkColor">#002f6c</color>
+  <color name="secondaryColor">#eeff41</color>
+  <color name="secondaryLightColor">#ffff78</color>
+  <color name="secondaryDarkColor">#b8cc00</color>
+  <color name="primaryTextColor">#ffffff</color>
+  <color name="secondaryTextColor">#000000</color>
 </resources>
